Class.newInstance() is deprecated (Since java9)